--- a/index.html
+++ b/index.html
@@ -1,13 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
-</head>
-<body>
-    <div class="container"></div>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="css/style.css" />
+        <title>Lebara</title>
+    </head>
+    <body>
+        <header>
+            <div class="container row justify-between align-center">
+                <img src="img/logo.png" width="80px" alt="" />
+                <nav>
+                    <ul>
+                        <li>
+                            <input
+                                type="button"
+                                value="Recargar"
+                                class="btn-azul"
+                            />
+                        </li>
+                        <li><a href="#">Tienda</a></li>
+                        <li><a href="#">MiLebara</a></li>
+                        <li><a href="#">Ayuda</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <div class="foto-grande">
+            <div class="content">
+                <h2>
+                    Una Aplicación Lebara para Android. La forma más simple de
+                    recargar.
+                </h2>
+                <input type="button" value="Descargar Ahora" class="btn-azul" />
+            </div>
+        </div>
+        <div class="container">
+            <div class="row justify-between">
+                <div class="col-2">
+                    <div class="card bg-rosa">
+                        <img src="img/card1.jpg" alt="" width="100%" />
+                        <div class="card-container">
+                            <h3>Todo en uno 15€</h3>
+                            <p>
+                                ¡Habla y Navega! <strong>300 min</strong> nacionales e
+                                internacionales + <strong>1 GB</strong> para navegar + 2000 min
+                                de Lebara a Lebara. ¡Sólo 15€ al mes!
+                            </p>
+                            <input
+                                type="button"
+                                value="Más info"
+                                class="btn-transparente btn-bottomright"
+                            />
+                        </div>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div class="card bg-naranja">
+                        <img src="img/card1.jpg" alt="" width="100%" />
+                        <div class="card-container">
+                            <h3>1GB por solo 6€!</h3>
+                            <p>Navega al mejor precio. ¡Oferta Limitada!</p>
+                            <input
+                                type="button"
+                                value="Más info"
+                                class="btn-transparente btn-bottomright"
+                            />
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-between">
+                <div class="col-4 mx-50">
+                    <div class="card bgimg1">
+                        <div class="small-card-container">
+                            <h3>Recarga tu móvil</h3>
+                            <p>
+                                Recarga tu móvil con Lebara desde cualquier
+                                parte del mundo.
+                            </p>
+                            <input
+                                type="button"
+                                value="Más info"
+                                class="btn-azul btn-bottomright"
+                            />
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 mx-50">
+                    <div class="card bgimg2">
+                        <div class="small-card-container">
+                            <h3>Bonos Todo en Uno Latinos</h3>
+                            <p>
+                                Bonos Latinos para hablar y navegar desde
+                                15€/mes
+                            </p>
+                            <input
+                                type="button"
+                                value="Más info"
+                                class="btn-azul btn-bottomright"
+                            />
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 mx-50">
+                    <div class="card bgimg3">
+                        <div class="small-card-container">
+                            <h3>Novedad Bonos</h3>
+                            <p>¡Liberate y navega! <strong>5 GB</strong> solo <strong>35€</strong></p>
+                            <input
+                                type="button"
+                                value="Más info"
+                                class="btn-azul btn-bottomright"
+                            />
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 mx-50">
+                    <div class="card bgimg4">
+                        <div class="small-card-container">
+                            <h3>Accede a MiLebara</h3>
+                            <p>
+                                Consulta <strong>llamadas</strong> y <strong>recarga</strong>
+                            </p>
+                            <input
+                                type="button"
+                                value="Registrarme"
+                                class="btn-azul btn-bottomright"
+                            />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <div class="container row justify-between">
+                <nav>
+                    <ul>
+                        <li><a href="#">Mapa Del Sitio</a></li>
+                        <li><a href="#">Política De Privacidad y Cookies</a></li>
+                        <li><a href="#">Descargo De Responsabilididad</a></li>
+                        <li><a href="#">Términos Y Condiciones</a></li>
+                    </ul>
+                </nav>
+                <div class="row justify-between align-center w-10">
+                    <img src="img/twitter.png" alt="">
+                    <img src="img/facebook.png" alt="">
+                </div>
+            </div>
+        </footer>
+    </body>
 </html>
