--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
                         <div class="card-container">
                             <h3>Todo en uno 15€</h3>
                             <p>
-                                ¡Habla y Navega! <strong>300 min</strong> nacionales e
-                                internacionales + <strong>1 GB</strong> para navegar + 2000 min
-                                de Lebara a Lebara. ¡Sólo 15€ al mes!
+                                ¡Habla y Navega!
+                                <strong>300 min</strong> nacionales e
+                                internacionales + <strong>1 GB</strong> para
+                                navegar + 2000 min de Lebara a Lebara. ¡Sólo 15€
+                                al mes!
                             </p>
                             <input
                                 type="button"
@@ -108,7 +110,10 @@
                     <div class="card bgimg3">
                         <div class="small-card-container">
                             <h3>Novedad Bonos</h3>
-                            <p>¡Liberate y navega! <strong>5 GB</strong> solo <strong>35€</strong></p>
+                            <p>
+                                ¡Liberate y navega! <strong>5 GB</strong> solo
+                                <strong>35€</strong>
+                            </p>
                             <input
                                 type="button"
                                 value="Más info"
@@ -122,7 +127,8 @@
                         <div class="small-card-container">
                             <h3>Accede a MiLebara</h3>
                             <p>
-                                Consulta <strong>llamadas</strong> y <strong>recarga</strong>
+                                Consulta <strong>llamadas</strong> y
+                                <strong>recarga</strong>
                             </p>
                             <input
                                 type="button"
@@ -139,14 +145,16 @@
                 <nav>
                     <ul>
                         <li><a href="#">Mapa Del Sitio</a></li>
-                        <li><a href="#">Política De Privacidad y Cookies</a></li>
+                        <li>
+                            <a href="#">Política De Privacidad y Cookies</a>
+                        </li>
                         <li><a href="#">Descargo De Responsabilididad</a></li>
                         <li><a href="#">Términos Y Condiciones</a></li>
                     </ul>
                 </nav>
                 <div class="row justify-between align-center w-10">
-                    <img src="img/twitter.png" alt="">
-                    <img src="img/facebook.png" alt="">
+                    <img src="img/twitter.png" alt="" />
+                    <img src="img/facebook.png" alt="" />
                 </div>
             </div>
         </footer>
